--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "leaflet": "^1.9.3",
+    "axios": "^1.3.1",
+    "dotenv": "^16.0.3",
+    "leaflet": "^1.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-leaflet": "^4.2.0"
+    "react-leaflet": "^4.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
